envoy-examples/ratelimit/bootstrap.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: some_service }
              rate_limits:
              - actions:
                - header_value_match:
                    descriptor_value: "rate"
                    headers:
                    - name: ":path"
                      exact_match: "/rate"
          http_filters:
          - name: envoy.rate_limit
            config:
               domain: envoy
          - name: envoy.router
  clusters:
  - name: some_service
    connect_timeout: 0.25s
    lb_policy: ROUND_ROBIN
    type: STATIC
    hosts: [{ socket_address: { address: 127.0.0.1, port_value: 5000 }}]
  - name: rate_limit_service # register the RateLimitService server
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {} # enable H2 protocol
    hosts:
    - socket_address:
        address: 127.0.0.1 
        port_value: 8081
rate_limit_service: # define the global rate limit service
  grpc_service:
    envoy_grpc:
      cluster_name: rate_limit_service
